plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'application.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
}

// Add a task to run the test producer
task runProducer(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'application.TestProducer'
    jvmArgs = ['--enable-preview']
}

repositories {
    mavenCentral()
}


dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // Json
    implementation "com.fasterxml.jackson.core:jackson-core:2.19.1"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.19.1"
    implementation "com.fasterxml.jackson.core:jackson-annotations:2.19.1"

    // Kafka
    implementation 'org.apache.kafka:kafka-clients:3.6.0'
    implementation 'org.postgresql:r2dbc-postgresql:1.0.7.RELEASE'

    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc:3.5.3'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
    implementation 'org.postgresql:r2dbc-postgresql:1.0.7.RELEASE'
    // Database
    implementation 'com.zaxxer:HikariCP:6.3.0'
    runtimeOnly 'org.hibernate:hibernate-core:6.6.15.Final'
    runtimeOnly 'org.postgresql:postgresql:42.7.7'
}